--- a/public/css/custome.css
+++ b/public/css/custome.css
@@ -1,6 +1,3 @@
-
-
-
 .icon-round{
     font-size: 50px;
     border: 4px solid #fff;
@@ -17,3 +14,85 @@
 .dashed:focus{
     box-shadow: none;
 }
+.bg-default {
+    background-color: #e8e8e8!important;
+    color: #000!important;
+}
+.md-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: #868484a6;
+    align-items: center;
+}
+.modal-default .md-overlay {
+    height: 135px;
+    background: #fff;
+}
+.md-overlay img{
+    width:135px;
+}
+
+.modal .blowup {
+    z-index: 0;
+    transform: scale(1);
+  }
+  .modal .blowup .modal-background {
+    background: rgba(0, 0, 0, 0.7);
+  }
+  .modal .blowup .modal-background {
+    animation: blowUpModal 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  }
+  .modal .blowup + .content {
+    z-index: 1;
+    animation: blowUpContent 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  }
+  .modal .blowup.out {
+    animation: blowUpModalTwo 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  }
+
+
+/* Modal blowUp Animation */
+
+@keyframes blowUpContent {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    99.9% {
+      transform: scale(2);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes blowUpContentTwo {
+    0% {
+      transform: scale(2);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+  @keyframes blowUpModal {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes blowUpModalTwo {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(0);
+      opacity: 0;
+    }
+  }
